# monstrominos

./: CMakeLists.txt  LEEME.md  README.md
include/: monstro-tlogic.h
src/: monstro-tallegro5.c  monstro-tcolor.c  monstro-tcore.c  monstro-tlogic.c  monstro-tncurses.c
unannotated/: monstro-tallegro5.c  monstro-tnofor.c
